# api-testing-demo-v2

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  playwright.config.js  pyproject.toml  requirements-docker.txt
app/: __init__.py  database.py  main.py  models.py  settings.py  sql_models.py  store.py
contracts/: order-list.schema.json  order.schema.json
docker/: python-service.Dockerfile
docs/validation/: report.html
docs/validation/raw/: contract.txt  functional.txt  fuzz.txt  integration.txt  jmeter-load.txt  jmeter-stress.txt  load.txt  playwright.txt  pytest-full.txt  regression.txt  reliability.txt  screenshots.txt  security.txt  smoke.txt  stress.txt  ui-browser.txt  ui-http.txt
jmeter/: README.md  load-test-plan.jmx  stress-test-plan.jmx
playwright/tests/: dashboard.spec.js
scripts/: capture_validation_screenshots.js  issue_demo_token.py  load_test.py  perf_common.py  stress_test.py
services/auth_service/: __init__.py  main.py
services/notification_service/: main.py
shared/: __init__.py  jwt_utils.py
tests/: conftest.py  test_contract.py  test_functional.py  test_fuzz.py  test_integration.py  test_regression.py  test_reliability.py  test_security.py  test_smoke.py  test_ui.py
